--- a/index.html
+++ b/index.html
@@ -6,11 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet"> 
+    
 </head>
 <body>
-    <div id="results"></div>
-    <button id="rock">Rock</button>
-    <button id="paper">Paper</button>
-    <button id="scissors">Scissors</button>
+    <h1>Rock, Paper, Scissors</h1>
+    <div id="results">
+        <p>Select your weapon to play. Choose wisely!</p> 
+    </div>
+    <div id="weapon-selector">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+    </div>
+    <div id="scores">
+        <div id="compScore">Evil Computer: 0</div>
+        <div id="playerScore">Player Score: 0</div>
+    </div>
 </body>
 </html>
