scripting finished for 5 round game. Winner declared, buttons disabled after game.

--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
 <body>
     <h1>Rock, Paper, Scissors</h1>
     <div id="results">
-        <p>Select your weapon to play. Choose wisely!</p> 
+        <p>Select your weapon to play. Best of five wins, so choose wisely!</p> 
     </div>
+    <div id="winner"></div>
     <div id="weapon-selector">
-        <button id="rock">Rock</button>
-        <button id="paper">Paper</button>
-        <button id="scissors">Scissors</button>
+        <button id="rock" class="option">Rock</button>
+        <button id="paper" class="option">Paper</button>
+        <button id="scissors" class="option">Scissors</button>
     </div>
     <div id="scores">
         <div id="compScore">Evil Computer: 0</div>
